corrected overflow of content section

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,3 +5,8 @@ body,html {
 * {
   box-sizing: border-box;
 }
+
+.navbarek {
+  color: red;
+  background-color: aqua;
+}
